[package]
name = "terrars-hashicorp-tls"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars TLS bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-hashicorp-tls"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.5"

[features]
cert_request = []
data_certificate = []
data_public_key = []
locally_signed_cert = []
private_key = []
self_signed_cert = []
